// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button default 1`] = `
<div
  className="css-w7u49k"
  onClick={[MockFunction]}
>
  Test button
</div>
`;

exports[`Button button with icon only 1`] = `
<div
  className="css-iitg9g"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <span
    className="css-1elqj97"
  >
    <span>
      icon
    </span>
  </span>
</div>
`;

exports[`Button disabled button 1`] = `
<div
  className="css-wbiefi"
  onClick={[Function]}
>
  Test button
</div>
`;

exports[`Button large outline button 1`] = `
<div
  className="css-o8eveq"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Test button
</div>
`;

exports[`Button rounded button with icon 1`] = `
<div
  className="css-6umef6"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <span
    className="css-1dl6nox"
  >
    <span>
      icon
    </span>
  </span>
  Test button
</div>
`;

exports[`Button small text button 1`] = `
<div
  className="css-402bfi"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Test button
</div>
`;
